issue #232